--- a/application/home/home-pitch.html
+++ b/application/home/home-pitch.html
@@ -5,18 +5,18 @@
 </div> -->
 <div class="row moral-justification" ng-controller="CloudCtrl">
 	<div class="col-sm-8 well">
+		<section >
+			<!-- <goku skill="{{skill}}" value="{{skill.value}}" ng-repeat="skill in apiMockArray"/> -->
+		</section>
 		<button class="" 
 			ng-click="filterSkills(skill)" 
 			ng-repeat="skill in apiMockArray">
-	<goku skill="{{skill.name}}" value="{{skill.value}}" />
-			<!-- jfdsjflkdsjfl -->
-			<!-- <goku skill="{{skill.name}}" value="{{skill.value"/> -->
+			{{skill.name}}{{skill.value}}
 			
-			<!-- <span class="label label-info"> {{skill.value}}</span> -->
 		</button>
 	</div>
 	<div class="col-sm-4">
-		<div class="well">
+		<div class="well" ng-controller="CloudCtrl">
 			<h4>Candidates</h4>
 			<ul>
 				<li ng-repeat="candidate in filteredCandidatesArray">
@@ -25,7 +25,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="well">
+		<div class="well" ng-controller="CloudCtrl">
 			<h4>Active Filters</h4>
 			<button class="btn btn-primary" 
 				ng-click="removeFilter(skill)" 
