--- a/application/home/home-pitch.html
+++ b/application/home/home-pitch.html
@@ -1,10 +1,13 @@
-<div class="row moral-justification">
+<!-- <div class="row moral-justification">
 	<div class="col-sm-12">
 		<h2>"During previous ages, samurai were able to move between masters and even between occupations. However, during the Edo period, samurai were restricted, and were above all forbidden to become employed by another master without their previous master's permission." <span>Ni dieu ni maître</span></h2>
 	</div>
-</div>
-<div class="row moral-justification" ng-controller="GoKu">
+</div> -->
+<div class="row moral-justification" ng-controller="CloudCtrl">
 	<div class="col-sm-8 well">
+		<section >
+			<!-- <cloud skill="{{skill}}" value="{{skill.value}}" ng-repeat="skill in apiMockArray"/> -->
+		</section>
 		<button class="btn btn-default" 
 			ng-click="filterSkills(skill)" 
 			ng-repeat="skill in apiMockArray">
