--- a/application/home/home-pitch.html
+++ b/application/home/home-pitch.html
@@ -5,15 +5,17 @@
 </div> -->
 <div class="row moral-justification" ng-controller="CloudCtrl">
 	<div class="col-sm-8 well">
-		<section >
-			<!-- <cloud skill="{{skill}}" value="{{skill.value}}" ng-repeat="skill in apiMockArray"/> -->
-		</section>
-		<button class="btn btn-default" 
+		
+		<!-- {{skills}} -->
+		<button class="tc tc-{{skill.weight}}" 
 			ng-click="addFilter(skill.text)" 
 			ng-repeat="skill in skills">
 			{{skill.text}}
 			<span class="label label-info"> {{skill.weight}}</span>
 		</button>
+		<!-- <cloud skills="{{skills}}"></cloud> -->
+		<!-- <cloud ng-repeat="skill in skills" value="{{skill.weight}}" skill="{{skill.text}}"> -->
+
 	</div>
 	<div class="col-sm-4">
 		<div class="well">
